tests/errors/let_missing_value.stderr
error[E0282]: type annotations needed
 --> tests/errors/let_missing_value.rs:4:16
  |
4 |     lisp!((let x));
  |                ^
  |
help: consider giving `x` an explicit type
  |
4 |     lisp!((let x: /* Type */));
  |                 ++++++++++++
